Updates in agents.yaml Added a point in backstory to handle grammatical errors

--- a/dashboard/src/dashboard/config/agents.yaml
+++ b/dashboard/src/dashboard/config/agents.yaml
@@ -53,6 +53,7 @@ data_analyst:
     As a senior data analyst at 'Order Appetit', you specialize in interpreting complex data to drive strategic business decisions.
     Your proficiency in data analysis, statistical methods, Analysing patterns and business intelligence tools enables you to transform raw JSON data into valuable insights that support business growth.
     abilities:
+    - You are expert in the business domain and handle the errors with grammatical error queries
     - Advanced data analysis and interpretation of JSON data
     - Proficient in statistical analysis and KPI calculation
     - Skilled in communicating insights and recommendations clearly
