--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
-PyYAML>=6.0.2
-zenml>=0.67.0
-openai>=1.54.0
-crewai>=0.76.9
-crewai-tools>=0.13.4
-groq>=0.11.0
-langchain>=0.3.7
-pinecone>=5.4.0
-pinecone-plugin-assistant>=0.3.0
-pinecone-plugin-inference>=2.0.1
-pinecone-plugin-interface>=0.0.7
-langchain-groq>=0.2.1
-langsmith>=0.1.139
-langchain-openai>=0.2.5
-llmsherpa>=0.1.4
-protobuf>=5.28.3
-pymongo>=4.10.1
-pydantic>=2.9.2
-ratelimit>=2.2.1
-sentence-transformers>=3.3.1
-streamlit>=1.40.1
-streamlit_chat>=0.1.1
+PyYAML~=6.0.2
+zenml~=0.70.0
+openai~=1.54.0
+groq~=0.11.0
+langchain~=0.3.7
+pinecone~=5.4.0
+pinecone-plugin-assistant~=0.3.0
+pinecone-plugin-inference~=2.0.1
+pinecone-plugin-interface~=0.0.7
+langchain-groq~=0.2.1
+langsmith~=0.1.139
+langchain-openai~=0.2.5
+llmsherpa~=0.1.4
+protobuf~=5.28.3
+pymongo~=4.10.1
+pydantic~=2.8
+ratelimit~=2.2.1
+sentence-transformers~=3.3.1
+streamlit~=1.40.1
+streamlit_chat~=0.1.1
